# SDL-Mixer-X

./: .appveyor.yml  .gitignore  .travis.yml  CHANGES.X.txt  CHANGES.txt  CMakeLists.txt  COPYING.txt  README.md  README.txt  SDL2_mixer_ext.License.txt  SDL_Mixer_X.pro  version.rc
.semaphore/: semaphore.yml
VB6_Wrapper/: SDL2MixerVB.License.txt  vb6_sdl_binds.c
cmake/: DownloadAudioCodecs.cmake  DownloadSdlHg.cmake  FindADLMIDI.cmake  FormatsSupported.cmake  NoPie.cmake  WhichLicense.cmake  libADLMIDI.cmake  libFLAC.cmake  libFluidSynth.cmake  libGME.cmake  libID3Tag.cmake  libMP3_MAD.cmake  libMPG123.cmake  libMikMod.cmake  libMusCmd.cmake  libNativeMidi.cmake  libOGG.cmake  libOPUS.cmake  libSDL2.cmake  libTimidity.cmake  libVorbis.cmake  libWAV.cmake  libXMP.cmake  mixerx_setup.cmake
cmake/find/: FindADLMIDI.cmake  FindFLAC.cmake  FindModPlug.cmake  FindOPNMIDI.cmake  FindOgg.cmake  FindOpus.cmake  FindTremor.cmake  FindVorbis.cmake  FindWavPack.cmake  FindXMP.cmake
cmake/tests/: adlmidi_channel_alloc_mode.c  adlmidi_set_mode_emidi.c  edmidi_set_mode_emidi.c  opnmidi_channel_alloc_mode.c  opnmidi_set_mode_emidi.c  xmp_tempo.c
doc/: SDL_mixer_ext.html  SDL_mixer_ext.texinfo  make.sh
docs/: 1_overview.texi  2_mixerx.texi  3_getting_started.texi  5_1_functions_general.texi  5_2_functions_samples.texi  5_3_functions_channels.texi  5_5_functions_music.texi  5_6_functions_effects.texi  6_types.texi  7_defines.texi  SDL_mixer_ext.html  SDL_mixer_ext.texinfo  index.md
examples/: CMakeLists.txt  make.sh  pge_version.h  playmus.c  playwave.c
examples/MusPlay-Qt/: CMakeLists.txt  changelog.musplay.txt  main.cpp  version.cmake  version.h
examples/MusPlay-Qt/AssocFiles/: assoc_files.cpp
examples/MusPlay-Qt/Effects/: reverb.cpp  reverb.h  spc_echo.cpp  spc_echo.h
examples/MusPlay-Qt/MainWindow/: echo_tune.cpp  echo_tune.h  echo_tune.ui  mainwindow.ui  multi_music_item.cpp  multi_music_item.h  multi_music_item.ui  multi_music_test.cpp  multi_music_test.h  multi_music_test.ui  multi_sfx_item.cpp  multi_sfx_item.h  multi_sfx_test.cpp  multi_sfx_test.h  multi_sfx_test.ui  musicfx.cpp  musicfx.h  musicfx.ui  musplayer_qt.cpp  musplayer_qt.h  player_main.ui  seek_bar.cpp  setup_midi.cpp  setup_midi.h  setup_midi.ui
examples/MusPlay-Qt/MainWindow/snes_spc/: SNES_SPC.cpp
examples/MusPlay-Qt/Player/: mus_player.cpp  mus_player.h
examples/MusPlay-Qt/_resources/: musplay.plist
include/: SDL_mixer.h
include/SDL_mixer_ext/: SDL_mixer_ext.h  SDL_mixer_ext_new.h  close_code.h
src/: audio_codec.c  audio_codec.h  effect_position.c  effect_stereoreverse.c  effects_internal.c  effects_internal.h  mixer.c  mixer.h  mixer_x_deprecated.c  music.c  music.h  stream_custom.c  stream_custom.h  utils.c  utils.h
src/codecs/: dynamic_mp3.c  dynamic_mp3.h  load_aiff.c  load_flac.c  load_voc.c  mp3utils.c  mp3utils.h  music_cmd.c  music_cmd.cmake  music_cmd.h  music_drflac.c  music_drflac.cmake  music_drmp3.c  music_drmp3.cmake  music_ffmpeg.c  music_ffmpeg.cmake  music_ffmpeg.h  music_flac.c  music_flac.cmake  music_flac.h  music_fluidlite.c  music_fluidlite.cmake  music_fluidsynth.c  music_fluidsynth.cmake  music_fluidsynth.h  music_gme.c  music_gme.cmake  music_gme.h  music_id3tag.c  music_id3tag.cmake  music_id3tag.h  music_mad.c  music_mad.cmake  music_mad.h  music_midi_adl.c  music_midi_adl.cmake  music_midi_adl.h  music_midi_edmidi.c  music_midi_edmidi.cmake  music_midi_edmidi.h  (+56 more)
src/codecs/OPNMIDI/: gm.wopn  gm_opn_bank.h  wopn2hpp.sh  xg.wopn
src/codecs/_junk/: music_fluidsynth.c
src/codecs/dr_libs/: dr_flac.h
src/codecs/midi_seq/: midi_sequencer.h  midi_sequencer_impl.hpp  mix_midi_seq.cpp  mix_midi_seq.h  win32_seq.cpp  win32_seq.h
src/codecs/minimp3/: minimp3_ex.h
src/codecs/native_midi/: native_midi.h  native_midi_common.c  native_midi_linux_alsa.c  native_midi_macosx.c  native_midi_win32.c
src/codecs/pxtone/: pxtn.h  pxtnData.cpp  pxtnData.h  pxtnDelay.cpp  pxtnDelay.h  pxtnError.h  pxtnEvelist.cpp  pxtnEvelist.h  pxtnMaster.cpp  pxtnMaster.h  pxtnOverDrive.cpp  pxtnPulse_Frequency.cpp  pxtnPulse_Noise.cpp  pxtnPulse_Noise.h  pxtnPulse_NoiseBuilder.cpp  pxtnPulse_Oggv.cpp  pxtnPulse_Oggv.h  pxtnPulse_Oscillator.cpp  pxtnPulse_PCM.cpp  pxtnService.cpp  pxtnService.h  pxtnService_moo.cpp  pxtnText.cpp  pxtnUnit.cpp  pxtnUnit.h  pxtnWoice.cpp  pxtnWoice.h  pxtnWoicePTV.cpp  pxtnWoice_io.cpp  pxtoneNoise.cpp  pxtoneNoise.h
src/codecs/qoa/: XQOA.txt
src/codecs/stb_vorbis/: README.txt  stb_vorbis.h  stb_vorbis_c90.h
src/codecs/timidity/: common.c  instrum.c  mix.c  options.h  output.c  output.h  playmidi.c  readmidi.c  readmidi.h  resample.c  tables.c  tables.h  timidity.c  timidity.h
src/vb6_binding/: vb6_sdl_binds.c
test/mp3tags/: mp3utils_test.c
